# grc-tech-evaluation

./: .JuliaFormatter.toml  .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  .implement-report.md  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  miss_hit.cfg
data/: .venv  Makefile  README.md  pyproject.toml  whitepaper_proposal.md
data/fnm/: .gitignore  README.md  manifest.json
data/fnm/docs/: README.md  field-criticality-matrix.md  intermediate-schema.md  mapping-guide.md  parser-comparison-report.md  per-unit-conventions.md  rubric-v4-justification.md  supplemental-csv-representability.md  supplemental-csvs.md  three-winding-transformers.md
data/fnm/reference/: README.md  pass_conditions.json
data/fnm/scripts/: README.md  __init__.py  acpf_reference.py  bus_exclusion_registry.py  csv_join_keys.py  dcpf_acpf_characterization.py  dcpf_reference.py  diagnose_acpf.m  export_intermediate_csvs.py  fnm_gating.py  fnm_gating_cli.py  fnm_gating_fixtures.py  generate_schema_reference.py  gridcal_parser.py  intermediate_schema.py  manifest_io.py  matpower_parser.py  parser_comparison.py  pass_conditions.py  raw_record_counter.py  run_psse2mpc.m  solve_main_island.m  solve_references.m  solved_snapshot.py  validation_report.py  (+6 more)
data/networks/: ATTRIBUTION.md  case_ACTIVSg10k.m
data/reference/: rts_gmlc_tech_classes.csv
data/scripts/: assign_reserve_eligibility.py  assign_temporal_params.py  build_rts_gmlc_reference.py  build_rts_gmlc_storage_reference.py  classify_gen_fuel.py  csv_schema.py  dcopf_congestion.py  define_reserves.py  download_activsg.py  estimate_correlation.py  fit_student_t.py  flowgate_definition.py  generate_forecasts.py  generate_scenario_multipliers.py  phase3_bess_placement.py  phase3_bess_reserve_eligibility.py  phase3_dr_placement.py  phase3_validation.py  preprocess_activsg.py  reconcile_bus_gen.py  renewable_profiles.py  run_pipeline.py  scenario_congestion.py  scenario_dcopf.py  select_representative_day.py  snapshot_cleanup.py  tiny_bess_dr.py  tiny_cleanup_classify.py  tiny_flowgates.py  tiny_gen_temporal_params.py  tiny_load_profile.py  tiny_reserve_definitions.py  tiny_stochastic_scenarios.py  update_evaluation_guides.py  validate_calibration.py  validate_referential_integrity.py  validate_scenarios.py  validate_scuc_feasibility.py
data/timeseries/: download_manifest.json
data/validation/: check_no_real_grid_names.py  generate_docs.py  generate_manifest.py  validate_cross_network.py  validate_flowgate_scenario.py  validate_reserve_bess_dr.py  validate_schema.py
evaluations/pandapower/: README.md  pyproject.toml  verify_install.py
evaluations/pypsa/: README.md  pyproject.toml  verify_install.py
report/: .gitignore  Makefile  Phase1_report_outline.md  REVIEW_CHECKLIST.md  UPDATE_PROCESS.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  selection-report-v10.md  selection-report-v11.md  selection-report-v4.md  selection-report.md  sidebars.js
report/data/: README.md  grades.json  head-to-head.json  probe-results.json  risk-register.json  sensitivity.json  sweep-themes.json  test-results.json  tool-profiles.json
report/docs/: contract-traceability.mdx  grid-primer.mdx  index.mdx  tools-evaluated.mdx  use-cases-criteria.mdx
report/scripts/: chart_types.py  extract_timing_data.py  generate_charts.py  smoke_test.py  validate_chart_manifest.py  validate_charts.py  validate_content.py  validate_diagram_style.py  validate_links.py
report/tests/: test_criterion_core_three.py  test_criterion_remaining_three.py  test_diagram_style_guide.py  test_grid_primer_prose.py  test_head_to_head.py  test_index.py  test_makefile_validate.py  test_python_lockfile.py  test_results_overview.py  test_review_checklist.py  test_smoke_test.py  test_tools_evaluated.py  test_validate_chart_manifest.py  test_validate_content.py  test_validate_links.py
tutorials/: 01_raw_data_orientation.py  02_generator_calibration.py  03_infrastructure_augmentation.py  04_stochastic_scenarios.py  05_validation_and_summary.py  06_economic_dispatch_and_lmp.py  grid_plot.py  pyproject.toml  verify_setup.py
(+2003 files in other folders)
