[project]
name = "grc-data-augmentation"
version = "0.1.0"
description = "Data augmentation pipeline for power-system tool evaluation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "jsonschema>=4.21",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "ruff>=0.15.4",
]
