[project]
name = "grc-report-charts"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.0",
    "kaleido>=0.4",
    "pandas>=2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
