[project]
name = "tutorials"
version = "0.1.0"
description = "Sequential marimo notebooks introducing power-system modeling concepts"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "altair",
    "pandas",
    "vl-convert-python",
    "grc-data-augmentation",
    "pyzmq>=27.1.0",
    "plotly",
    "networkx",
]

[tool.uv]
package = false

[tool.uv.sources]
grc-data-augmentation = { path = "../data" }

[[tool.uv.index]]
name = "zge-python"
url = "https://us-central1-python.pkg.dev/zge-main/zge-python-repo/simple/"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
