[project]
name = "grc-eval-pandapower"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandapower[performance]",
    "matpowercaseframes",
    "pyomo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"verify_install.py" = ["T201"]
