[project]
name = "grc-eval-pypsa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pypsa",
    "pandapower",
    "highspy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"verify_install.py" = ["T201"]
